--- a/src/app/all-component/student/student-dashboard/student-dashboard.component.html
+++ b/src/app/all-component/student/student-dashboard/student-dashboard.component.html
@@ -1,1 +1,56 @@
-<p>student-dashboard works!</p>
+<header class="main-header">
+
+  <div class="logo">
+    <a><em><img class="logo-image" src="assets/images/logo.png" alt="Submit" >
+      OEMS</em></a>
+  </div>
+  <nav id="menu" class="main-nav" role="navigation">
+    <ul class="main-menu">
+      <li class="has-submenu"><i class="fa fa-user" aria-hidden="true"></i><a>{{username}}</a>
+        <ul class="sub-menu" >
+          <li><a routerLink='not-assign-yet' fragment='not-assign'>Profile</a></li>
+          <li><a routerLink='login'>Logout</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+</header>
+<div class="container">
+  <div class="{{sidebarOpened ? 'show-sidebar sidebar': 'sidebar'}}">
+    <div>
+
+
+      <nav class="left-nav" role="navigation">
+        <ul class= "left-menu">
+          <li ><a><span class="material-icons icon-style">dashboard</span>Dashboard</a></li>
+        </ul>
+        <ul class= "left-menu" >
+          <li class="has-left-sub-menu"><a (click) = "li1 = !li1"><span class="material-icons icon-style">group</span>Teacher List</a>
+            <ul class="{{li1 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
+              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class="material-icons icon-style sub-icon">group</span>Present Teacher's</a></li>
+              <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>person_add_alt</span>Pending Teachers</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class= "left-menu" >
+          <li class="has-left-sub-menu"><a (click) = "li2 = !li2"><span class='material-icons icon-style'>groups</span>Student List</a>
+            <ul class="{{li2 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
+              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>groups</span>Present Students</a></li>
+              <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>person_add_alt</span>Pending Student</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+  </div>
+  <div class=" {{sidebarOpened ? 'no-padding right-body': 'right-body'}}">
+    All content is here
+    <router-outlet></router-outlet>
+  </div>
+  <i class=" {{sidebarOpened ? 'color-icon fa fa-bars icon': 'fa fa-bars icon'}}" (click)="toggleSidebar()"></i>
+
+
+
+</div>
+
