--- a/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -1,1 +1,83 @@
-<p>teacher-dashboard works!</p>
+<header class="main-header">
+
+  <div class="logo">
+    <a><em><img class="logo-image" src="assets/images/logo.png" alt="Submit" >
+      OEMS</em></a>
+  </div>
+  <nav id="menu" class="main-nav" role="navigation">
+    <ul class="main-menu">
+      <li class="has-submenu"><i class="fa fa-user" aria-hidden="true"></i><a>{{username}}</a>
+        <ul class="sub-menu" >
+          <li><a routerLink='not-assign-yet' fragment='not-assign'>Profile</a></li>
+          <li><a routerLink='login'>Logout</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+</header>
+<div class="container">
+  <div class="{{sidebarOpened ? 'show-sidebar sidebar': 'sidebar'}}">
+    <div>
+
+
+      <nav class="left-nav" role="navigation">
+        <ul class= "left-menu">
+          <li ><a><span class="material-icons icon-style">dashboard</span>Dashboard</a></li>
+        </ul>
+        <ul class= "left-menu">
+          <li ><a><span class="material-icons icon-style">group</span>All Teacher</a></li>
+        </ul>
+        <ul class= "left-menu" >
+          <li class="has-left-sub-menu"><a (click) = "li2 = !li2"><span class='material-icons icon-style'>groups</span>Student List</a>
+            <ul class="{{li2 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
+              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>people_outline</span>My Students</a></li>
+              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>groups</span>All Students</a></li>
+            </ul>
+          </li>
+        </ul>
+
+        <ul class= "left-menu" >
+          <li class="has-left-sub-menu"><a (click) = "li3 = !li3"><span class='material-icons icon-style'>school</span>Course</a>
+            <ul class="{{li3 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
+              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>checklist</span>My Courses</a></li>
+              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>view_list</span>All Course List</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class= "left-menu" >
+          <li class="has-left-sub-menu"><a (click) = "li4 = !li4"><span class='material-icons icon-style'>history_edu</span>Question</a>
+            <ul class="{{li4 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
+              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>post_add</span>Make Question</a></li>
+              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>library_books</span>My Question List</a></li>
+              <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>elevator</span>Students of X Exam</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class= "left-menu" >
+          <li class="has-left-sub-menu"><a (click) = "li5 = !li5"><span class='material-icons icon-style'>verified</span>Result</a>
+            <ul class="{{li5 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
+              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>description</span>Examine AnswerScript</a></li>
+              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>check_circle</span>Assign Grade</a></li>
+              <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>pending_actions</span>Pending Result</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class= "left-menu">
+          <li ><a><span class="material-icons icon-style">add_moderator</span>Review</a></li>
+        </ul>
+
+
+
+      </nav>
+    </div>
+
+  </div>
+  <div class=" {{sidebarOpened ? 'no-padding right-body': 'right-body'}}">
+    All content is here
+    <router-outlet></router-outlet>
+  </div>
+  <i class=" {{sidebarOpened ? 'color-icon fa fa-bars icon': 'fa fa-bars icon'}}" (click)="toggleSidebar()"></i>
+
+
+
+</div>
