--- a/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
@@ -22,10 +22,10 @@
 
       <nav class="left-nav" role="navigation">
         <ul class= "left-menu">
-          <li ><a><span class="material-icons icon-style">dashboard</span>Dashboard</a></li>
+          <li ><a routerLink="board"><span class="material-icons icon-style">dashboard</span>Dashboard</a></li>
         </ul>
         <ul class= "left-menu" >
-          <li class="has-left-sub-menu"><a (click) = "li1 = !li1"><span class="material-icons icon-style">group</span>Teacher List</a>
+          <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li1 = !li1"><span class="material-icons icon-style">group</span>Teacher List</a>
             <ul class="{{li1 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class="material-icons icon-style sub-icon">group</span>Present Teacher's</a></li>
               <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>person_add_alt</span>Pending Teachers</a></li>
@@ -33,7 +33,7 @@
           </li>
         </ul>
         <ul class= "left-menu" >
-          <li class="has-left-sub-menu"><a (click) = "li2 = !li2"><span class='material-icons icon-style'>groups</span>Student List</a>
+          <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li2 = !li2"><span class='material-icons icon-style'>groups</span>Student List</a>
             <ul class="{{li2 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>people_outline</span>My Students</a></li>
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>groups</span>All Students</a></li>
@@ -49,7 +49,7 @@
         </ul>
 
         <ul class= "left-menu" >
-          <li class="has-left-sub-menu"><a (click) = "li3 = !li3"><span class='material-icons icon-style'>school</span>Course</a>
+          <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li3 = !li3"><span class='material-icons icon-style'>school</span>Course</a>
             <ul class="{{li3 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>checklist</span>My Courses</a></li>
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>view_list</span>All Course List</a></li>
@@ -58,7 +58,7 @@
           </li>
         </ul>
         <ul class= "left-menu" >
-          <li class="has-left-sub-menu"><a (click) = "li4 = !li4"><span class='material-icons icon-style'>history_edu</span>Question</a>
+          <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li4 = !li4"><span class='material-icons icon-style'>history_edu</span>Question</a>
             <ul class="{{li4 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>post_add</span>Make Question</a></li>
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>library_books</span>My Question List</a></li>
@@ -67,7 +67,7 @@
           </li>
         </ul>
         <ul class= "left-menu" >
-          <li class="has-left-sub-menu"><a (click) = "li5 = !li5"><span class='material-icons icon-style'>verified</span>Result</a>
+          <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li5 = !li5"><span class='material-icons icon-style'>verified</span>Result</a>
             <ul class="{{li5 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>description</span>Examine AnswerScript</a></li>
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>check_circle</span>Assign Grade</a></li>
@@ -86,7 +86,6 @@
 
   </div>
   <div class=" {{sidebarOpened ? 'no-padding right-body': 'right-body'}}">
-    All content is here
     <router-outlet></router-outlet>
   </div>
  <i class=" {{sidebarOpened ? 'color-icon fa fa-bars icon': 'fa fa-bars icon'}}" (click)="toggleSidebar()"></i>
