--- a/src/app/all-component/student/student-dashboard/student-dashboard.component.html
+++ b/src/app/all-component/student/student-dashboard/student-dashboard.component.html
@@ -22,10 +22,10 @@
 
       <nav class="left-nav" role="navigation">
         <ul class= "left-menu">
-          <li ><a><span class="material-icons icon-style">dashboard</span>Dashboard</a></li>
+          <li ><a routerLink="board"><span class="material-icons icon-style">dashboard</span>Dashboard</a></li>
         </ul>
         <ul class= "left-menu" >
-          <li class="has-left-sub-menu"><a (click) = "li1 = !li1"><span class="material-icons icon-style">school</span>Courses</a>
+          <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li1 = !li1"><span class="material-icons icon-style">school</span>Courses</a>
             <ul class="{{li1 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class="material-icons icon-style sub-icon">pending</span>Present Courses</a></li>
               <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>checklist</span>Departmental Courses</a></li>
@@ -34,7 +34,7 @@
           </li>
         </ul>
         <ul class= "left-menu" >
-          <li class="has-left-sub-menu"><a (click) = "li2 = !li2"><span class='material-icons icon-style'>history_edu</span>Exam</a>
+          <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li2 = !li2"><span class='material-icons icon-style'>history_edu</span>Exam</a>
             <ul class="{{li2 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>library_books</span>Upcoming Exam</a></li>
               <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>elevator</span>Previous Exam</a></li>
@@ -45,7 +45,7 @@
           <li ><a><span class="material-icons icon-style">villa</span>Exam Hall</a></li>
         </ul>
         <ul class= "left-menu" >
-          <li class="has-left-sub-menu"><a (click) = "li3= !li3"><span class='material-icons icon-style'>reviews</span>Review</a><span class="material-icons hot">new_releases</span>
+          <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li3= !li3"><span class='material-icons icon-style'>reviews</span>Review</a><span class="material-icons hot">new_releases</span>
             <ul class="{{li3 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>rate_review</span>Re-examing Script</a></li>
               <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>preview</span>Request Ans-Script</a></li>
@@ -58,7 +58,6 @@
 
   </div>
   <div class=" {{sidebarOpened ? 'no-padding right-body': 'right-body'}}">
-    All content is here
     <router-outlet></router-outlet>
   </div>
   <i class=" {{sidebarOpened ? 'color-icon fa fa-bars icon': 'fa fa-bars icon'}}" (click)="toggleSidebar()"></i>
