add all teacher module in admin, teacher, fix decoration, change humbarger design, fix under footer white space, add device flexibility

--- a/src/app/all-component/student/student-dashboard/student-dashboard.component.html
+++ b/src/app/all-component/student/student-dashboard/student-dashboard.component.html
@@ -6,10 +6,10 @@
   </div>
   <nav id="menu" class="main-nav" role="navigation">
     <ul class="main-menu">
-      <li class="has-submenu"><i class="fa fa-user" aria-hidden="true"></i><a>{{username}}</a>
+      <li class="has-submenu"><i class="fa fa-user" aria-hidden="true"></i><a > <span class = "userName">{{username}}</span> </a>
         <ul class="sub-menu" >
           <li><a routerLink='not-assign-yet' fragment='not-assign'>Profile</a></li>
-          <li><a routerLink='login' (click) = "logOut()">Logout</a></li>
+          <li><a routerLink='login' (click)= "logOut()">Logout</a></li>
         </ul>
       </li>
     </ul>
@@ -17,10 +17,12 @@
 </header>
 <div class="container">
   <div class="{{sidebarOpened ? 'show-sidebar sidebar': 'sidebar'}}">
-    <div>
+    <img src="assets/images/hamburger.svg" alt="<"  class="hamburger" (click)="toggleSidebar()">
 
+    <div class="{{sidebarOpened ? 'sidebar-wrapper show-sidebar-wrapper': 'sidebar-wrapper'}}">
 
-      <nav class="left-nav" role="navigation">
+      <div>
+        <nav class="left-nav" role="navigation">
         <ul class= "left-menu">
           <li ><a routerLink="board"><span class="material-icons icon-style">dashboard</span>Dashboard</a></li>
         </ul>
@@ -54,15 +56,15 @@
         </ul>
 
       </nav>
+      </div>
     </div>
 
   </div>
   <div class=" {{sidebarOpened ? 'no-padding right-body': 'right-body'}}">
     <router-outlet></router-outlet>
   </div>
-  <i class=" {{sidebarOpened ? 'color-icon fa fa-bars icon': 'fa fa-bars icon'}}" (click)="toggleSidebar()"></i>
 
+    <img src="assets/images/hamburger.svg" alt="<" class= "{{sidebarOpened ? 'show-damburger damburger': ' damburger'}}" (click)="toggleSidebar()">
 
-
-</div>
+  </div>
 
