--- a/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -32,7 +32,7 @@
           <ul class= "left-menu" >
             <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li1 = !li1"><span class='material-icons icon-style'>groups</span>Student List</a>
               <ul class="{{li1 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
-                <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>people_outline</span>My Students</a></li>
+                <li><a routerLink='my-students'><span class='material-icons icon-style sub-icon'>people_outline</span>My Students</a></li>
                 <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>groups</span>All Students</a></li>
               </ul>
             </li>
