Add bicolor two row diff color in all-teaher and present teacher component

--- a/src/app/all-component/teacher/all-teacher/all-teacher.component.css
+++ b/src/app/all-component/teacher/all-teacher/all-teacher.component.css
@@ -3,5 +3,14 @@ table {
 }
 mat-cell{
   word-break: break-all;
+  color: var(--themcolor);
 }
-
+.color-show{
+  background-image: linear-gradient(#9fcdff, #F0f8fb);
+}
+.title-color-show{
+  background-image: linear-gradient(#03204c, #035c96);
+}
+mat-header-cell{
+  color: #80bdff;
+}
