--- a/src/app/all-component/teacher/all-teacher/all-teacher.component.html
+++ b/src/app/all-component/teacher/all-teacher/all-teacher.component.html
@@ -7,6 +7,6 @@
 
   </ng-container>
 
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
+  <mat-header-row *matHeaderRowDef="displayedColumns" [ngClass]="{'title-color-show': true}"></mat-header-row>
+  <mat-row *matRowDef="let row;let odd = odd; columns: displayedColumns;" [ngClass]="{'color-show': odd }"></mat-row>
+</mat-table><br>
