--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
 :root{
   --black:#000;
   --headerfoterh:60px;
+  --themcolor:#152036;
 
 }
 
