--- a/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
@@ -38,7 +38,7 @@
             <ul class="{{li2 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='my-students'><span class='material-icons icon-style sub-icon'>people_outline</span>My Students</a></li>
               <li><a routerLink='all-students' fragment='not-assign'><span class='material-icons icon-style sub-icon'>groups</span>All Students</a></li>
-              <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>person_add_alt</span>Pending Student</a></li>
+              <li><a routerLink='pending-students'><span class='material-icons icon-style sub-icon'>person_add_alt</span>Pending Student</a></li>
             </ul>
           </li>
         </ul>
