--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url(assets/css/fontawesome.css);
+@import url(../../Nabendu_info_Personal/src/assets/Font/fontawesome.css);
 @import '../node_modules/alertifyjs/build/css/alertify.min.css';
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
 @import '../node_modules/alertifyjs/build/css/themes/default.min.css';
