--- a/src/app/all-component/admin/pending-student/pending-student.component.css
+++ b/src/app/all-component/admin/pending-student/pending-student.component.css
@@ -1,5 +1,6 @@
 table {
   width: 100%;
+  margin: 4px ;
 }
 mat-cell{
   word-break: break-all;
@@ -10,6 +11,7 @@ mat-cell{
 }
 .title-color-show{
   background-image: linear-gradient(#03204c, #035c96);
+
 }
 mat-header-cell{
   color: #80bdff;
