--- a/src/app/all-component/public/public-dashboard/public-dashboard.component.css
+++ b/src/app/all-component/public/public-dashboard/public-dashboard.component.css
@@ -1,4 +1,4 @@
-@import url(../../../../../../Nabendu_info_Personal/src/assets/Font/fontawesome.css);
+@import url(../../../../assets/css/fontawesome.css);
 a {
   color: #3CF;
   text-decoration: none !important;
