--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
   --black:#000;
   --headerfoterh:60px;
   --themcolor:#152036;
+  --them-color-lite: #0492C2;
 
 }
 
