try to add delete pending teacher functionality

--- a/src/app/all-component/admin/popup/popup.component.html
+++ b/src/app/all-component/admin/popup/popup.component.html
@@ -59,7 +59,7 @@
       </mat-form-field>
 
       <button class ="signup" mat-raised-button color="primary"  type='submit' >Approve</button>
-      <button class ="signup" mat-raised-button color="primary"  type='submit' >Delete</button>
+      <button mat-raised-button color="primary" (click)="FunctionDelete()">Delete</button>
     </form>
   </mat-card-content>
 </mat-card>
