--- a/src/app/all-component/admin/add-department/add-department.component.css
+++ b/src/app/all-component/admin/add-department/add-department.component.css
@@ -1,38 +1,42 @@
 .new-dept{
-  width: 100%;
   background-image: url(../../../../assets/images/choosing-bg.jpg);
   padding: 10px;
+  height: 100vh;
 }
-.new-dept .dept .title{
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 20px;
-  color: var(--them-color-lite);
+.new-dept img{
 }
 .new-dept .dept{
   background-color: var(--themcolor);
   margin: 0 auto;
   width: 50%;
   opacity: 90%;
-  justify-content: center;
-  align-items: center;
   padding: 10px;
   border: 1px solid var(--them-color-lite);
+}
+.new-dept .dept .main-title{
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: var(--them-color-lite);
+  font-weight: 600;
+  width: 100%;
 }
 .new-dept .dept .add-dept{
 
 }
-.new-dept .dept .add-dept .submitDept{
-  width: 100%;
-}
+
 .new-dept .dept .add-dept .deptId{
   width: 100%;
 }
-.new-dept .dept .add-dept .title{
-  color: var(--themcolor);
-}
 .new-dept .dept .add-dept .deptName{
   width: 100%;
+}
+mat-form-field{
+  width: 100% !important;
+}
+.new-dept .dept .add-dept .title{
+  color: var(--themcolor);
+
 }
 .new-dept .dept .add-dept .submitDept{
   padding: 8px;
@@ -40,5 +44,6 @@
   border: none;
   background: #e83e8c;
   color: #fff;
-  font-weight: 500;
+  font-weight: 600;
+  width: 100%;
 }
