add design for add-course component and change-semester component

--- a/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
@@ -46,7 +46,7 @@
           <li ><a routerLink="add-department"><span class="material-icons icon-style">add_box</span>Add department</a></li>
         </ul>
         <ul class= "left-menu">
-          <li ><a><span class="material-icons icon-style">add_moderator</span>Change Semester</a></li>
+          <li ><a routerLink="shift-semester"><span class="material-icons icon-style">add_moderator</span>Change Semester</a></li>
         </ul>
 
         <ul class= "left-menu" >
@@ -54,7 +54,7 @@
             <ul class="{{li3 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>checklist</span>My Courses</a></li>
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>view_list</span>All Course List</a></li>
-              <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>playlist_add</span>Add course</a></li>
+              <li><a routerLink='add-course'><span class='material-icons icon-style sub-icon'>playlist_add</span>Add course</a></li>
             </ul>
           </li>
         </ul>
