--- a/src/app/all-component/admin/change-semester/change-semester.component.css
+++ b/src/app/all-component/admin/change-semester/change-semester.component.css
@@ -2,12 +2,13 @@
   background-image: url(../../../../assets/images/choosing-bg.jpg);
   padding: 10px;
   height: 100vh;
+
 }
 .new-semester img{
 }
 .new-semester .semester{
   background-color: var(--themcolor);
-  margin: 0 auto;
+  margin:auto;
   width: 50%;
   opacity: 90%;
   padding: 10px;
@@ -46,4 +47,11 @@ mat-form-field{
   color: #fff;
   font-weight: 600;
   width: 100%;
+}
+.new-semester h3{
+  color: #bd2130;
+  text-align: center;
+  max-width: 40vw;
+  margin: auto;
+
 }
