add all-course design, implementation, logic, api connection

--- a/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -42,7 +42,7 @@
             <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li2 = !li2"><span class='material-icons icon-style'>school</span>Course</a>
               <ul class="{{li2 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
                 <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>checklist</span>My Courses</a></li>
-                <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>view_list</span>All Course List</a></li>
+                <li><a routerLink='all-courses' fragment='not-assign'><span class='material-icons icon-style sub-icon'>view_list</span>All Course List</a></li>
               </ul>
             </li>
           </ul>
