--- a/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
@@ -52,7 +52,7 @@
         <ul class= "left-menu" >
           <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li3 = !li3"><span class='material-icons icon-style'>school</span>Course</a>
             <ul class="{{li3 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
-              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>checklist</span>My Courses</a></li>
+              <li><a routerLink='my-courses' fragment='not-assign'><span class='material-icons icon-style sub-icon'>checklist</span>My Courses</a></li>
               <li><a routerLink='all-courses' fragment='not-assign'><span class='material-icons icon-style sub-icon'>view_list</span>All Course List</a></li>
               <li><a routerLink='add-course'><span class='material-icons icon-style sub-icon'>playlist_add</span>Add course</a></li>
               <li><a routerLink='assign-course'><span class='material-icons icon-style sub-icon'>card_giftcard</span>Assign Course</a></li>
