--- a/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -41,7 +41,7 @@
           <ul class= "left-menu" >
             <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li2 = !li2"><span class='material-icons icon-style'>school</span>Course</a>
               <ul class="{{li2 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
-                <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>checklist</span>My Courses</a></li>
+                <li><a routerLink='my-courses' fragment='not-assign'><span class='material-icons icon-style sub-icon'>checklist</span>My Courses</a></li>
                 <li><a routerLink='all-courses' fragment='not-assign'><span class='material-icons icon-style sub-icon'>view_list</span>All Course List</a></li>
               </ul>
             </li>
@@ -49,7 +49,7 @@
           <ul class= "left-menu" >
             <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li3 = !li3"><span class='material-icons icon-style'>history_edu</span>Question</a>
               <ul class="{{li3 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
-                <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>post_add</span>Make Question</a></li>
+                <li><a routerLink='set-question' fragment='not-assign'><span class='material-icons icon-style sub-icon'>post_add</span>Make Question</a></li>
                 <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>library_books</span>My Question List</a></li>
                 <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>elevator</span>Students of X Exam</a></li>
               </ul>
